--- a/Enerpetrol1/style.css
+++ b/Enerpetrol1/style.css
@@ -15,17 +15,25 @@
   position: relative;
 }
 .logo {
-  padding-left: 4%;
+  padding-left: 2%;
 }
 
 .nav-links{
   width: 100%;
-  color: #fff;
-  background-color:gray;
+  background:-webkit-linear-gradient(white,white,gray,transparent);;
   display: flex;
   justify-content: space-between;
   align-items: center;  
 }
+.nav-links .hero-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: black;
+  padding: 8px 35px;
+  border: 2px solid darkgreen;
+
+}
+
 .nav-menu ul{
   display: flex;
   padding-right: 30px;
@@ -40,15 +48,7 @@
   color: black;
   text-transform: uppercase;
 }
-.nav-menu ul li::after {
-  content: "";
-  width: 0%;
-  height: 3px;
-  background: green;
-  display: block;
-  margin: auto;
-  transition: 0.5s;
-}
+
 .nav-menu ul li:hover::after {
   width: 100%;
 }
@@ -76,7 +76,7 @@
     position: absolute;
     background: #fff;
     height: 300xp;
-    width: 200px;
+    width: 290px;
     top: 127px;
     left: 0;
     text-align:center;
@@ -134,7 +134,7 @@
   display: inline-block;
   text-decoration: none;
   color: azure;
-  border: 1px solid #fff;
+  border: 1px solid white;
   padding: 12px 34px;
   font-size: 13px;
   background: transparent;
@@ -375,13 +375,13 @@ color: #01012e;
 
 /* Footer */
 .footer-distributed {
-  background: gray;
+  background: black;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-  box-sizing: border-box;
+  box-sizing:border-box;
   width: 100%;
   text-align: left;
   font: bold 16px sans-serif;
-  padding: 55px 50px;
+  padding: 5px 10px;
 }
 .footer-distributed .footer-left,
 .footer-distributed .footer-center,
@@ -415,9 +415,9 @@ color: #01012e;
 /* Footer Center */
 
 .footer-distributed .footer-center {
-  width: 35%;
+  width: 25%;
 }
-.footer-distributed .footer-center i {
+.footer-distributed .footer-left i {
   background-color: darkgreen;
   color: #ffffff;
   font-size: 25px;
@@ -429,24 +429,24 @@ color: #01012e;
   margin: 10px 15px;
   vertical-align: middle;
 }
-.footer-distributed .footer-center i.fa-envelope {
+.footer-distributed .footer-left i.fa-envelope {
   font-size: 17px;
   line-height: 38px;
 }
-.footer-distributed .footer-center p {
-  display: inline-block;
+.footer-distributed .footer-left p {
+  display: inline;
   color: #ffffff;
   font-weight: 400;
   vertical-align: middle;
   margin: 0;
 }
-.footer-distributed .footer-center p span {
+.footer-distributed .footer-left p span {
   display: block;
   font-weight: normal;
   font-size: 14px;
   line-height: 2;
 }
-.footer-distributed .footer-center p a {
+.footer-distributed .footer-left p a {
   color: darkgreen;
   text-decoration: none;
 }
@@ -476,29 +476,30 @@ color: #01012e;
 }
 .footer-distributed .footer-company-about span {
   display: block;
-  color: #da;
+  color: darkgreen;
   font-size: 14px;
   font-weight: bold;
   margin-bottom: 20px;
 }
 .footer-distributed .footer-icons {
-  margin-top: 25px;
+  margin-top: 70px ;
+  margin-left: 70px;
 }
 .footer-distributed .footer-icons a {
   display: inline-block;
-  width: 35px;
-  height: 35px;
+  width: 50px;
+  height: 50px;
   cursor: pointer;
   background-color: darkgreen;
   border-radius: 2px;
 
-  font-size: 20px;
+  font-size: 30px;
   color: #ffffff;
   text-align: center;
-  line-height: 35px;
+  line-height: 55px;
 
-  margin-right: 3px;
-  margin-bottom: 5px;
+  margin-right: 5px;
+  margin-bottom: 10px;
 }
 /* Allows for the footer to be reponsive */
 
