--- a/Enerpetrol1/projectsstyle.css
+++ b/Enerpetrol1/projectsstyle.css
@@ -1,108 +1,127 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: Georgia;
+  margin: 0;
+  padding: 0;
+  font-family: Georgia;
+}
+.header {
+  min-height: 100vh;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+.logo {
+  padding-left: 2%;
+}
+
+.nav-links{
+  width: 100%;
+  background:-webkit-linear-gradient(white,white,white,gray);;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;  
+}
+.nav-links .hero-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: black;
+  border: 2px solid darkgreen;
+
+}
+.nav-links .hero-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: black;
+  border: 2px solid darkgreen;
+  height: 20px;
+  padding: 10px 35px;
+  font-size: 18px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
+}
+.hero-btn:hover {
+  border: 1px solid green;
+  background: green;
+  transition: 1s;
+}
+.nav-menu ul{
+  display: flex;
+  padding-right: 30px;
+}
+.nav-menu ul li{
+  list-style: none;
+  padding: 15px 15px;
+}
+.nav-menu ul li a{
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+  text-transform: uppercase;
+}
+
+.nav-menu ul li:hover::after {
+  width: 100%;
+}
+.toggle-btn{
+  position: absolute;
+  top: 50px;
+  right: 30px;
+  display: none;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 22px;
+  width: 32px;
+}
+.toggle-btn .bar{
+  height: 17%;
+  width: 100%;
+  background-color: green;
+  border-radius: 10px;
+}
+@media screen and (max-width: 768px) {
+  .toggle-btn{
+    display: flex;
   }
-  .header {
-    min-height: 100vh;
-    width: 100%;
+  .nav-menu {
+    position: absolute;
+    background: #fff;
+    height: 300xp;
+    width: 290px;
+    top: 127px;
+    left: 0;
+    text-align:center;
+    z-index: 2;
+    transition: 2s;
+    display: none;
   }
   
-  .nav-links{
+  .nav-links {
+    color: white;
+    font-size: 22px;
     width: 100%;
-    color: #fff;
-    background-color:white;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;  
+    flex-direction: column;
+    align-items: flex-start;
+
   }
-  .nav-menu ul{
-    display: flex;
-    padding-right: 30px;
+  .nav-menu ul {
+    padding-right: 0px;
+    width: 100%;
+    flex-direction: column;
   }
   .nav-menu ul li{
-    list-style: none;
-    padding: 15px 15px;
+    padding-left: 30px;
   }
   .nav-menu ul li a{
-    text-decoration: none;
-    font-size: 18px;
+    font-size: 17px;
     color: black;
-    text-transform: uppercase;
   }
-  .nav-menu ul li::after {
-    content: "";
-    width: 0%;
-    height: 3px;
-    background: green;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-  }
-  .nav-menu ul li:hover::after {
-    width: 100%;
-  }
-  .toggle-btn{
-    position: absolute;
-    top: 50px;
-    right: 30px;
-    display: none;
-    justify-content: space-between;
-    flex-direction: column;
-    height: 22px;
-    width: 32px;
-  }
-  .toggle-btn .bar{
-    height: 17%;
-    width: 100%;
-    background-color: green;
-    border-radius: 10px;
-  }
-  @media screen and (max-width: 768px) {
-    .toggle-btn{
-      display: flex;
-    }
-    .nav-menu {
-      position: absolute;
-      background: #fff;
-      height: 300xp;
-      width: 200px;
-      top: 127px;
-      left: 0;
-      text-align:center;
-      z-index: 2;
-      transition: 2s;
-      display: none;
-    }
+  .nav-menu.active{
+    display: flex;
     
-    .nav-links {
-      color: white;
-      font-size: 22px;
-      width: 100%;
-      flex-direction: column;
-      align-items: flex-start;
-  
-    }
-    .nav-menu ul {
-      padding-right: 0px;
-      width: 100%;
-      flex-direction: column;
-    }
-    .nav-menu ul li{
-      padding-left: 30px;
-    }
-    .nav-menu ul li a{
-      font-size: 17px;
-      color: black;
-    }
-    .nav-menu.active{
-      display: flex;
-      
-    }
   }
+}
   
-  
-  /*---BUG:Find out why header isnt fully centered---*/
   .text-box {
     width: 100%;
     color: azure;
@@ -179,150 +198,150 @@
     font-weight: 600;
   }
  
-  /* Footer */
+ /* Footer */
 .footer-distributed {
-    background: rgb(22, 22, 22);
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
-    width: 100%;
-    text-align: left;
-    font: bold 16px sans-serif;
-    padding: 55px 50px;
+  background: black;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing:border-box;
+  width: 100%;
+  text-align: left;
+  font: bold 16px sans-serif;
+  padding: 5px 10px;
+}
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right {
+  display: inline-block;
+  vertical-align: top;
+}
+/* Footer left */
+
+.footer-distributed .footer-left {
+  width: 40%;
+}
+.footer-distributed .footer-links {
+  color: #ffffff;
+  margin: 20px 0 12px;
+  padding: 0;
+}
+.footer-distributed .footer-links a {
+  display: inline-block;
+  line-height: 1.8;
+  font-weight: 400;
+  text-decoration: none;
+  color: inherit;
+}
+.footer-distributed .footer-company-name {
+  color: white;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 0;
+}
+/* Footer Center */
+
+.footer-distributed .footer-center {
+  width: 25%;
+}
+.footer-distributed .footer-left i {
+  background-color: darkgreen;
+  color: #ffffff;
+  font-size: 25px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 42px;
+  margin: 10px 15px;
+  vertical-align: middle;
+}
+.footer-distributed .footer-left i.fa-envelope {
+  font-size: 17px;
+  line-height: 38px;
+}
+.footer-distributed .footer-left p {
+  display: inline;
+  color: #ffffff;
+  font-weight: 400;
+  vertical-align: middle;
+  margin: 0;
+}
+.footer-distributed .footer-left p span {
+  display: block;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 2;
+}
+.footer-distributed .footer-left p a {
+  color: darkgreen;
+  text-decoration: none;
+}
+.footer-distributed .footer-links a:before {
+  content: "|";
+  font-weight: 300;
+  font-size: 20px;
+  left: 0;
+  color: darkgreen;
+  display: inline-block;
+  padding-right: 5px;
+}
+.footer-distributed .footer-links .link-1:before {
+  content: none;
+}
+/* Footer Right */
+
+.footer-distributed .footer-right {
+  width: 20%;
+}
+.footer-distributed .footer-company-about {
+  line-height: 20px;
+  color: #ffffff;
+  font-size: 13px;
+  font-weight: normal;
+  margin: 0;
+}
+.footer-distributed .footer-company-about span {
+  display: block;
+  color: darkgreen;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.footer-distributed .footer-icons {
+  margin-top: 70px ;
+  margin-left: 70px;
+}
+.footer-distributed .footer-icons a {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  background-color: darkgreen;
+  border-radius: 2px;
+  font-size: 35px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 55px;
+
+  margin-right: 5px;
+  margin-bottom: 10px;
+}
+/* Allows for the footer to be reponsive */
+
+@media (max-width: 880px) {
+  .footer-distributed {
+    font: bold 14px sans-serif;
   }
+
   .footer-distributed .footer-left,
   .footer-distributed .footer-center,
   .footer-distributed .footer-right {
-    display: inline-block;
-    vertical-align: top;
+    display: block;
+    width: 100%;
+    margin-bottom: 40px;
+    text-align: center;
   }
-  /* Footer left */
-  
-  .footer-distributed .footer-left {
-    width: 40%;
-  }
-  .footer-distributed .footer-links {
-    color: #ffffff;
-    margin: 20px 0 12px;
-    padding: 0;
-  }
-  .footer-distributed .footer-links a {
-    display: inline-block;
-    line-height: 1.8;
-    font-weight: 400;
-    text-decoration: none;
-    color: inherit;
-  }
-  .footer-distributed .footer-company-name {
-    color: white;
-    font-size: 14px;
-    font-weight: normal;
-    margin: 0;
-  }
-  /* Footer Center */
-  
-  .footer-distributed .footer-center {
-    width: 35%;
-  }
+
   .footer-distributed .footer-center i {
-    background-color: darkgreen;
-    color: #ffffff;
-    font-size: 25px;
-    width: 38px;
-    height: 38px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 42px;
-    margin: 10px 15px;
-    vertical-align: middle;
+    margin-left: 0;
   }
-  .footer-distributed .footer-center i.fa-envelope {
-    font-size: 17px;
-    line-height: 38px;
-  }
-  .footer-distributed .footer-center p {
-    display: inline-block;
-    color: #ffffff;
-    font-weight: 400;
-    vertical-align: middle;
-    margin: 0;
-  }
-  .footer-distributed .footer-center p span {
-    display: block;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 2;
-  }
-  .footer-distributed .footer-center p a {
-    color: darkgreen;
-    text-decoration: none;
-  }
-  .footer-distributed .footer-links a:before {
-    content: "|";
-    font-weight: 300;
-    font-size: 20px;
-    left: 0;
-    color: darkgreen;
-    display: inline-block;
-    padding-right: 5px;
-  }
-  .footer-distributed .footer-links .link-1:before {
-    content: none;
-  }
-  /* Footer Right */
-  
-  .footer-distributed .footer-right {
-    width: 20%;
-  }
-  .footer-distributed .footer-company-about {
-    line-height: 20px;
-    color: #ffffff;
-    font-size: 13px;
-    font-weight: normal;
-    margin: 0;
-  }
-  .footer-distributed .footer-company-about span {
-    display: block;
-    color: #da;
-    font-size: 14px;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-  .footer-distributed .footer-icons {
-    margin-top: 25px;
-  }
-  .footer-distributed .footer-icons a {
-    display: inline-block;
-    width: 35px;
-    height: 35px;
-    cursor: pointer;
-    background-color: darkgreen;
-    border-radius: 2px;
-  
-    font-size: 20px;
-    color: #ffffff;
-    text-align: center;
-    line-height: 35px;
-  
-    margin-right: 3px;
-    margin-bottom: 5px;
-  }
-  /* Allows for the footer to be reponsive */
-  
-  @media (max-width: 880px) {
-    .footer-distributed {
-      font: bold 14px sans-serif;
-    }
-  
-    .footer-distributed .footer-left,
-    .footer-distributed .footer-center,
-    .footer-distributed .footer-right {
-      display: block;
-      width: 100%;
-      margin-bottom: 40px;
-      text-align: center;
-    }
-  
-    .footer-distributed .footer-center i {
-      margin-left: 0;
-    }
-  }
+}
