--- a/Enerpetrol1/contactstyle.css
+++ b/Enerpetrol1/contactstyle.css
@@ -15,11 +15,34 @@ body
 
 .nav-links{
   width: 100%;
-  color: black;
-  background-color: white;
+  background:-webkit-linear-gradient(white,white,white,gray);;
   display: flex;
   justify-content: space-between;
   align-items: center;  
+}
+.nav-links .hero-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: black;
+  border: 2px solid darkgreen;
+
+}
+.nav-links .hero-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: black;
+  border: 2px solid darkgreen;
+  height: 44px;
+  padding: 10px 35px;
+  font-size: 18px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
+}
+.hero-btn:hover {
+  border: 1px solid green;
+  background: green;
+  transition: 1s;
 }
 .nav-menu ul{
   display: flex;
@@ -35,15 +58,7 @@ body
   color: black;
   text-transform: uppercase;
 }
-.nav-menu ul li::after {
-  content: "";
-  width: 0%;
-  height: 3px;
-  background: green;
-  display: block;
-  margin: auto;
-  transition: 0.5s;
-}
+
 .nav-menu ul li:hover::after {
   width: 100%;
 }
@@ -71,7 +86,7 @@ body
     position: absolute;
     background: #fff;
     height: 300xp;
-    width: 200px;
+    width: 290px;
     top: 127px;
     left: 0;
     text-align:center;
@@ -105,7 +120,6 @@ body
     
   }
 }
-
 
 .contactus
 {
@@ -285,13 +299,13 @@ body
 }
 /* Footer */
 .footer-distributed {
-  background: rgb(22, 22, 22);
+  background: black;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-  box-sizing: border-box;
+  box-sizing:border-box;
   width: 100%;
   text-align: left;
   font: bold 16px sans-serif;
-  padding: 55px 50px;
+  padding: 5px 10px;
 }
 .footer-distributed .footer-left,
 .footer-distributed .footer-center,
@@ -325,9 +339,9 @@ body
 /* Footer Center */
 
 .footer-distributed .footer-center {
-  width: 35%;
+  width: 25%;
 }
-.footer-distributed .footer-center i {
+.footer-distributed .footer-left i {
   background-color: darkgreen;
   color: #ffffff;
   font-size: 25px;
@@ -339,24 +353,24 @@ body
   margin: 10px 15px;
   vertical-align: middle;
 }
-.footer-distributed .footer-center i.fa-envelope {
+.footer-distributed .footer-left i.fa-envelope {
   font-size: 17px;
   line-height: 38px;
 }
-.footer-distributed .footer-center p {
-  display: inline-block;
+.footer-distributed .footer-left p {
+  display: inline;
   color: #ffffff;
   font-weight: 400;
   vertical-align: middle;
   margin: 0;
 }
-.footer-distributed .footer-center p span {
+.footer-distributed .footer-left p span {
   display: block;
   font-weight: normal;
   font-size: 14px;
   line-height: 2;
 }
-.footer-distributed .footer-center p a {
+.footer-distributed .footer-left p a {
   color: darkgreen;
   text-decoration: none;
 }
@@ -386,29 +400,29 @@ body
 }
 .footer-distributed .footer-company-about span {
   display: block;
-  color: #da;
+  color: darkgreen;
   font-size: 14px;
   font-weight: bold;
   margin-bottom: 20px;
 }
 .footer-distributed .footer-icons {
-  margin-top: 25px;
+  margin-top: 70px ;
+  margin-left: 70px;
 }
 .footer-distributed .footer-icons a {
   display: inline-block;
-  width: 35px;
-  height: 35px;
+  width: 50px;
+  height: 50px;
   cursor: pointer;
   background-color: darkgreen;
   border-radius: 2px;
-
-  font-size: 20px;
+  font-size: 35px;
   color: #ffffff;
   text-align: center;
-  line-height: 35px;
+  line-height: 55px;
 
-  margin-right: 3px;
-  margin-bottom: 5px;
+  margin-right: 5px;
+  margin-bottom: 10px;
 }
 /* Allows for the footer to be reponsive */
 
@@ -430,4 +444,3 @@ body
     margin-left: 0;
   }
 }
-
