--- a/Enerpetrol1/servicosstyle.css
+++ b/Enerpetrol1/servicosstyle.css
@@ -14,6 +14,7 @@
     font-style: oblique;
     font-weight: 400;
 	color: #235106
+}
 * {
   margin: 0;
   padding: 0;
@@ -28,6 +29,11 @@
 }
 .logo {
   padding-left: 2%;
+}
+.image-logo {
+  width: 170px;
+  height: 100%;
+  
 }
 
 .nav-links{
@@ -49,9 +55,9 @@
   text-decoration: none;
   color: black;
   border: 2px solid darkgreen;
-  height: 45px;
-  padding: 10px 35px;
-  font-size: 18px;
+  height: 59px;
+  padding: 15px 75px;
+  font-size: 23px;
   background: transparent;
   position: relative;
   cursor: pointer;
@@ -60,6 +66,7 @@
   border: 1px solid green;
   background: green;
   transition: 1s;
+  color: white;
 }
 .nav-menu ul{
   display: flex;
@@ -317,28 +324,12 @@
 }
 /* Footer */
 .footer-distributed {
-    background: rgb(22, 22, 22);
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
-    width: 100%;
-    text-align: left;
-    font: bold 16px sans-serif;
-    padding: 55px 50px;
-  }
-  .footer-distributed .footer-left,
-  .footer-distributed .footer-center,
-  .footer-distributed .footer-right {
-    display: inline-block;
-    vertical-align: top;
-  }
-  /* Footer */
-.footer-distributed {
   background: black;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
   box-sizing:border-box;
   width: 100%;
   text-align: left;
-  font: bold 16px sans-serif;
+  font: bold 20px sans-serif;
   padding: 5px 10px;
 }
 .footer-distributed .footer-left,
@@ -434,7 +425,7 @@
 }
 .footer-distributed .footer-company-about span {
   display: block;
-  color: darkgreen;
+  color: white;
   font-size: 14px;
   font-weight: bold;
   margin-bottom: 20px;
